[package]
name = "philharmonic-connector-impl-llm-gemini"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-llm-gemini"
description = "Google Gemini API connector implementation for Philharmonic (llm_generate capability)."

[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
